[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Font/TitilliumWeb-SemiBold.ttf" type="FontFile" id=1]
[ext_resource path="res://UI/Font/Font14.tres" type="FontFile" id=2]
[ext_resource path="res://UI/AddValve.gd" type="Script" id=3]
[ext_resource path="res://UI/Font/Font16l.tres" type="FontFile" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.384314, 0.419608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.384314, 0.419608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.439216, 0.47451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontFile" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.384314, 0.419608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.439216, 0.47451, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="AddValve" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.278431, 0.380392, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
offset_right = 480.0
offset_bottom = 685.0
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
offset_left = 20.0
offset_top = 25.0
offset_right = 460.0
offset_bottom = 675.0
theme_override_constants/separation = 35

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
offset_right = 440.0
offset_bottom = 245.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 218.0
offset_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 35

[node name="Tag" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_right = 218.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Tag"]
anchor_left = 0.00469484
anchor_top = -0.0571429
anchor_right = 0.995305
anchor_bottom = 0.0285714
offset_top = -15.0
offset_bottom = -1.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource( 2 )
text = "Tag"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Di" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 70.0
offset_right = 218.0
offset_bottom = 105.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1
placeholder_text = "Kun tilbakeslag"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Di"]
anchor_right = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = -1.0
theme_override_fonts/font = ExtResource( 2 )
text = "Indre diameter"
align = 1
valign = 1

[node name="CompF" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 140.0
offset_right = 218.0
offset_bottom = 175.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1
placeholder_text = "Kun gass"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CompF"]
anchor_right = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = -1.0
theme_override_fonts/font = ExtResource( 2 )
text = "Kompressabilitet"
align = 1
valign = 1

[node name="Dens" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 210.0
offset_right = 218.0
offset_bottom = 245.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1
placeholder_text = "Kun væske"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Dens"]
anchor_right = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = -1.0
theme_override_fonts/font = ExtResource( 2 )
text = "Densitet"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 222.0
offset_right = 440.0
offset_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 35

[node name="Volume" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_right = 218.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Volume"]
anchor_right = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = -1.0
theme_override_fonts/font = ExtResource( 2 )
text = "Cavityvolum"
align = 1
valign = 1

[node name="MW" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_top = 70.0
offset_right = 218.0
offset_bottom = 105.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1
placeholder_text = "Kun gass"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MW"]
anchor_right = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = -1.0
theme_override_fonts/font = ExtResource( 2 )
text = "Molvekt gass"
align = 1
valign = 1

[node name="Elasticity" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_top = 140.0
offset_right = 218.0
offset_bottom = 175.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 5 )
align = 1
placeholder_text = "Kun væske"

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Elasticity"]
anchor_right = 1.0
offset_left = 1.0
offset_top = -17.0
offset_right = -1.0
theme_override_fonts/font = ExtResource( 2 )
text = "Elastisitet"
align = 1
valign = 1

[node name="Type" type="OptionButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_top = 210.0
offset_right = 218.0
offset_bottom = 245.0
custom_minimum_size = Vector2( 0, 35 )
theme_override_fonts/font = ExtResource( 5 )
theme_override_styles/hover = SubResource( 6 )
theme_override_styles/pressed = SubResource( 7 )
theme_override_styles/normal = SubResource( 5 )
text = "Ventil"
align = 1
items = [ "Ventil", null, false, 0, null, "Tilbakeslag", null, false, 1, null ]
selected = 0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Type"]
anchor_right = 1.0
offset_top = -17.0
theme_override_fonts/font = ExtResource( 2 )
text = "Ventiltype"
align = 1
valign = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
offset_top = 280.0
offset_right = 440.0
offset_bottom = 315.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer"]
offset_left = 68.0
offset_right = 372.0
offset_bottom = 35.0

[node name="Add" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
offset_right = 150.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 150, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 4 )
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/normal = SubResource( 2 )
text = "Legg til ny ventil"

[node name="Back" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
offset_left = 154.0
offset_right = 304.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 150, 35 )
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 4 )
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/normal = SubResource( 2 )
text = "Tilbake"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/VBoxContainer"]
offset_top = 350.0
offset_right = 440.0
offset_bottom = 650.0
custom_minimum_size = Vector2( 0, 300 )
size_flags_vertical = 3
text = "Her kan du legge til nye ventiler midlertidig. De vil forsvinne når du lukker programmet

For ventiler som testes med gass er det bare nødvendig å fylle ut de som er merket med \"Kun gass\". Det samme gjelder for væske merket \"Kun væske\". Det er kun nødvendig å fyll inn indre diameter for tilbakeslagsventiler. Tag og cavityvolum skal alltid fylles ut"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
